[backend] Update finding values for cve type (#3379)