@@ -7,6 +7,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
@@ -132,17 +133,21 @@ public enum ContractOutputType {
           jsonNode.get("id") != null
               && jsonNode.get("host") != null
               && jsonNode.get("severity") != null,
+      (JsonNode jsonNode) -> buildString(jsonNode, "id"),
       (JsonNode jsonNode) -> {
-        String id = buildString(jsonNode, "id");
-        String host = buildString(jsonNode, "host");
-        String severity = buildString(jsonNode, "severity");
-        return host + ":" + id + " (" + severity + ")";
-      },
-      (JsonNode jsonNode) -> {
-        if (jsonNode.get("asset_id") != null) {
-          return List.of(jsonNode.get("asset_id").asText());
+        JsonNode assetIdNode = jsonNode.get("asset_id");
+        if (assetIdNode == null) {
+          return Collections.emptyList();
         }
-        return new ArrayList<>();
+        if (assetIdNode.isArray()) {
+          List<String> result = new ArrayList<>();
+          for (JsonNode idNode : assetIdNode) {
+            result.add(idNode.asText());
+          }
+          return result;
+        } else {
+          return List.of(assetIdNode.asText());
+        }
       },
       null,
       null);
